--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "graphql-tag": "^2.9.2",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
-    "query-string": "^6.1.0",
+    "query-string": "5",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
