--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NODE_PATH=src/
+REACT_APP_COGNITO_LOGIN=https://coa-web-2.auth.us-east-1.amazoncognito.com/login?response_type=code&client_id=2uu574tlad2ajk5hmj94fnjeva&redirect_uri=http://localhost:3000/login
+REACT_APP_COGNITO_LOGOUT=https://coa-web-2.auth.us-east-1.amazoncognito.com/logout?client_id=2uu574tlad2ajk5hmj94fnjeva&logout_uri=http://localhost:3000/logout
