--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy-reviews-frontend": "aws s3 sync dist s3://reviews-frontend.ashevillenc.gov --delete",
+    "deploy-dev-reviews-frontend": "aws s3 sync dist s3://dev-reviews-frontend.ashevillenc.gov"
   },
   "devDependencies": {
     "eslint": "^5.4.0",
