--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "query-string": "5",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
+    "react-collapsible": "^2.3.1",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.4.2",
     "react-radio-group": "^3.0.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-table": "^6.8.6",
+    "react-tinymce": "^0.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
