--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apollo-cache-inmemory": "^1.2.9",
     "apollo-client": "^2.4.1",
     "apollo-link-http": "^1.5.4",
+    "draft-js": "^0.10.5",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.9.2",
     "moment": "^2.22.2",
