--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-radio-group": "^3.0.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "^3.0.1",
     "react-table": "^6.8.6",
     "react-tinymce": "^0.7.0"
   },
@@ -33,9 +33,20 @@
     "deploy-dev-reviews-frontend": "aws s3 sync build s3://dev-reviews-frontend.ashevillenc.gov --delete"
   },
   "devDependencies": {
-    "eslint": "^5.4.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
