--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-radio-group": "^3.0.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "^3.0.1",
     "react-table": "^6.8.6",
     "react-tinymce": "^0.7.0"
   },
