--- a/package.json
+++ b/package.json
@@ -3,40 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-cache-inmemory": "^1.2.9",
-    "apollo-client": "^2.4.1",
-    "apollo-link-http": "^1.5.4",
-    "draft-js": "^0.10.5",
-    "graphql": "^14.0.0",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link-http": "^1.5.15",
+    "draft-js": "^0.11.7",
+    "fibers": "^5.0.0",
+    "fsevents": "^2.1.3",
+    "graphql": "^14.4.2",
     "graphql-tag": "^2.9.2",
     "moment": "^2.22.2",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.6.2",
     "query-string": "5",
     "react": "^16.4.2",
-    "react-apollo": "^2.1.11",
+    "react-apollo": "^2.5.8",
     "react-collapsible": "^2.3.1",
     "react-datepicker": "^1.6.0",
     "react-dom": "^16.4.2",
     "react-radio-group": "^3.0.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.4.1",
     "react-table": "^6.8.6",
-    "react-tinymce": "^0.7.0"
+    "react-tinymce": "^0.7.0",
+    "sass": "^1.26.5",
+    "typescript": "^3.9.3",
+    "watchpack": "^1.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy-reviews-frontend": "aws s3 sync build s3://reviews-frontend.ashevillenc.gov --delete",
     "deploy-dev-reviews-frontend": "aws s3 sync build s3://dev-reviews-frontend.ashevillenc.gov --delete"
   },
-  "devDependencies": {
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-react": "^7.11.1"
-  },
+  "devDependencies": {},
   "browserslist": {
     "production": [
       ">0.2%",
