--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   aws-s3: circleci/aws-s3@1.0.15
 
 jobs:
-  build:
+  dev:
     docker:
       - image: 'cimg/python:3.6'
     steps:
@@ -19,23 +19,35 @@ jobs:
           arguments: |
             --acl public-read \
             --cache-control "max-age=0"
-
+  prod:
+    docker:
+      - image: 'cimg/python:3.6'
+    steps:
+      - checkout
+      - aws-s3/sync:
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          aws-region: AWS_DEFAULT_REGION
+          from: ./
+          to: 's3://${S3_DEPLOY_BUCKET}'
+          overwrite: true
+          arguments: |
+            --acl public-read \
+            --cache-control "max-age=0"
 workflows:
   version: 2
-  deploy-development:
+  deploy:
     jobs:
-      - build:
+      - dev:
           filters:
             branches:
               only: development
           context: reviews-frontend-development
-  deploy-production:
-    jobs:
       - approval:
           type: approval
           filters:
             only: main
-      - build:
+      - prod:
           requires: approval
           filters:
             branches:
