--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   aws-s3: circleci/aws-s3@1.0.15
 defaults: &defaults
   docker:
-    - image: 'circleci/node:12.9.1-browsers'
+    - image: 'circleci/node:12.18'
 
 jobs:
   dev:
