--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,21 +10,6 @@ jobs:
   dev:
     <<: *defaults
     steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-      - run: yarn install      
-      - run: npm install
-      - save_cache:
-          paths:
-            - node_modules
-            - ~/.npm
-            - ~/.cache
-          key: v1-dependencies-{{ checksum "package.json" }}
-          
       - run: npm run build
       - aws-s3/sync:
           aws-access-key-id: AWS_ACCESS_KEY_ID
@@ -44,7 +29,7 @@ jobs:
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           aws-region: AWS_DEFAULT_REGION
-          from: ./
+          from: ./build
           to: 's3://${S3_DEPLOY_BUCKET}'
           overwrite: true
           arguments: |
