--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,11 @@ jobs:
   dev:
     <<: *defaults
     steps:
-      - run: npm run build
       - aws-s3/sync:
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           aws-region: AWS_DEFAULT_REGION
-          from: ./build
+          from: build
           to: 's3://${S3_DEPLOY_BUCKET}'
           overwrite: true
           arguments: |
@@ -29,7 +28,7 @@ jobs:
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           aws-region: AWS_DEFAULT_REGION
-          from: ./build
+          from: build
           to: 's3://${S3_DEPLOY_BUCKET}'
           overwrite: true
           arguments: |
